fix: carousel items tabbable only if visible; removed horizontal and removeArrowsOnDeviceType props

--- a/packages/@foodbudget/frontend/components/Carousel/Carousel.module.scss
+++ b/packages/@foodbudget/frontend/components/Carousel/Carousel.module.scss
@@ -20,11 +20,8 @@
 .carouselWrapper {
   display: flex;
   position: relative;
-  flex-direction: column;
   overflow: hidden;
-  &--horizontal {
-    flex-direction: row;
-  }
+  flex-direction: column;
 }
 
 .slideWrapper {
