--- a/packages/@foodbudget/frontend/src/MealPlanPage/RecipeModal/RecipeCard/RecipeCard.module.scss
+++ b/packages/@foodbudget/frontend/src/MealPlanPage/RecipeModal/RecipeCard/RecipeCard.module.scss
@@ -4,8 +4,8 @@
 
 .recipeCard {
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   width: 100%;
-  height: 300px;
+  min-height: 300px;
   cursor: pointer;
 }
